fix: white landing screen spacing + team spacing

--- a/src/main.css
+++ b/src/main.css
@@ -29,7 +29,7 @@
     }
 
     h1 {
-        font-size: 4.75rem;
+        font-size: 4.25rem;
         line-height: 1.1;
     }
     h2 {
@@ -209,8 +209,13 @@ html {
     margin-top: 3rem;
 }
 
-.white-landing #landing-img {
+.white-landing-img-container {
     width: 40%;
+    height: 100%;
+}
+
+.white-landing-img-container img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
@@ -223,6 +228,7 @@ html {
 
     .white-landing-content {
         width: 100%;
+        height: fit-content;
     }
 
     .white-landing-content h2 {
@@ -233,17 +239,20 @@ html {
         margin-block: 1rem;
     }
 
-    .white-landing #landing-img {
-        width: 100%;
-        height: 55%;
+    .white-landing-img-container {
+        flex: 1;
+        width: auto;
+
+        overflow: hidden;
     }
+
 }
 
 @media (max-width: 600px) {
 
     .white-landing #landing-img {
-        width: 100%;
-        height: 50%;
+        /* width: 100%;
+        height: 50%; */
     }
 }
 
@@ -1138,7 +1147,7 @@ html {
 
 .team-redirect-img-container {
     width: 100%;
-    height: 40vh;
+    height: 32.5vh;
     overflow: hidden;
     
     margin-block: 0.25rem;
@@ -1181,7 +1190,6 @@ html {
     .team-redirect-container {
             grid-template-columns: repeat(3, minmax(0, 1fr));    
     }
-
 
     .team-redirect-img-container {
         height: 30vh;
