--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -29,7 +29,7 @@
     }
 
     h1 {
-        font-size: 4.75rem;
+        font-size: 4.25rem;
         line-height: 1.1;
     }
     h2 {
