--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -47,8 +47,13 @@
     margin-top: 3rem;
 }
 
-.white-landing #landing-img {
+.white-landing-img-container {
     width: 40%;
+    height: 100%;
+}
+
+.white-landing-img-container img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
@@ -61,6 +66,7 @@
 
     .white-landing-content {
         width: 100%;
+        height: fit-content;
     }
 
     .white-landing-content h2 {
@@ -71,17 +77,20 @@
         margin-block: 1rem;
     }
 
-    .white-landing #landing-img {
-        width: 100%;
-        height: 55%;
+    .white-landing-img-container {
+        flex: 1;
+        width: auto;
+
+        overflow: hidden;
     }
+
 }
 
 @media (max-width: 600px) {
 
     .white-landing #landing-img {
-        width: 100%;
-        height: 50%;
+        /* width: 100%;
+        height: 50%; */
     }
 }
 
